# cedar-tpe

./: .gitignore  Cargo.toml
src/: lib.rs
src/resources/: example.cedarschema
