[package]
name = "cedar-test"
version = "0.1.0"
edition = "2024"

[dependencies]
cedar-policy = { version = "4.8.2", features = ["partial-eval", "tpe"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
itertools = "0.14.0"
chrono = "0.4.42"
memory-stats = "1.2.0"
uuid = { version = "1.18.1", features = ["v4", "v7"] }
serde_json = "1.0.145"
